# Hands-On-Design-Patterns-with-CPP

./: CMakeLists.txt
Chapter04/: CMakeLists.txt  std_swap_noncopyable.C  std_swap_nonmovable.C
Chapter05/: CMakeLists.txt  memory1.C  scoped_ptr1_bm.C
Chapter06/: CMakeLists.txt
Chapter08/: CMakeLists.txt  function_call.C
Chapter10/: CMakeLists.txt  string2.C
